# word-sense-disambiguation

./: .gitignore  BENCHMARK.md  Dockerfile  Dockerfile.train  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  publish-docker.yaml  test.yaml
training/: README.md  train.py  wn_data.py
training/data/: README.md  check_ollama.py  generate.py  skip_forms.txt
wsd/: README.md  bench_inference.py  benchmark.py  bias_probe.py  env.py  letters.py  masked_language_model.py  model.py  model_surgery.py  prime.py  prompt.py  server.py  test_letters.py  test_masked_language_model.py  test_model_surgery.py  test_server.py  test_word_sense_disambiguation.py  word_sense_disambiguation.py  wsd.template.html
